fdo#55187 fix DOCX import of unicode 0xNN0d when it's a separate run

E.g. 0x010d was parsed as a newline character... This also makes the RTF
workaround from fdo#39856 unnecessary.

Change-Id: I5e4a95b4436e1492b64961820702caace0a33e4b